# data-retrieval

./: .gitignore  README.md
exercises/: BONUS_ASSIGNMENT.md  pyproject.toml
exercises/src/Exercise 1/: README.md  data_cleaner.py  data_lemmatized.py  data_sbert.py  data_scraper.py  data_simcse_embeddings.py  data_vectoriztion.py  data_wordtovec.py  information_gain.py  information_gain_lemmatized_data.csv  sum_culoms_iformation_gain.py
exercises/src/Exercise 2/: BM25.py  README.md  classification.py  data_cleaner.py  data_lemmatized.py  result.py
exercises/src/Exercise 3/: README.md  chunker.py  data_loader.py  generate_plots.py  main.py  rag.py  rag_evaluation_results.csv  requirements.txt  retriever.py
exercises/src/Exercise 3/data/US_congressional_speeches_Text_Files/: 2023-07-03.txt  2023-07-06.txt  2023-07-10.txt  2023-07-11.txt  2023-07-12.txt  2023-07-13.txt  2023-07-14.txt  2023-07-17.txt  2023-07-18.txt  2023-07-19.txt  2023-07-20.txt  2023-07-24.txt  2023-07-25.txt  2023-07-26.txt  2023-07-27.txt  2023-07-28.txt  2023-08-01.txt  2023-08-04.txt  2023-08-08.txt  2023-08-11.txt  2023-08-15.txt  2023-08-18.txt  2023-08-22.txt  2023-08-25.txt  2023-08-29.txt  2023-09-01.txt  2023-09-05.txt  2023-09-06.txt  2023-09-08.txt  2023-09-11.txt  2023-09-12.txt  2023-09-13.txt  2023-09-14.txt  2023-09-18.txt  2023-09-19.txt  2023-09-20.txt  2023-09-21.txt  2023-09-22.txt  2023-09-26.txt  2023-09-27.txt  (+320 more)
exercises/src/Exercise 3/data/british_debates_text_files_normalize/: debates2023-06-28.txt  debates2023-06-29.txt  debates2023-07-03.txt  debates2023-07-04.txt  debates2023-07-05.txt  debates2023-07-06.txt  debates2023-07-10.txt  debates2023-07-11.txt  (+321 more)
exercises/src/Exercise 4/: README.md  chunker.py  data_loader.py  main.py  prove_of_consept.py  qeries.txt  rag.py  retriever.py  temporal_rag_results.csv  temporal_rag_results_2.csv
exercises/src/Exercise Bonus/: .gitignore  README.md  REPORT.md  REPORT_TEMPLATE.md  pyproject.toml  requirements.txt
exercises/src/Exercise Bonus/src/: config.py  data_ingestion.py  influence_analysis.py  io_utils.py  knowledge_graph.py  rag_scoring.py  run_all.py  run_stage_a.py  run_stage_b.py  run_stage_c.py  run_stage_d.py  temporal_scoring.py  time_windows.py  topic_discovery.py
(+33 files in other folders)
