[project]
name = "exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.7",
    "gensim>=4.4.0",
    "hdbscan>=0.8.40",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "ruff>=0.14.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "spacy[apple]>=3.8.7",
    "umap-learn>=0.5.9.post2",
]
